@@ -252,7 +252,10 @@ common.user=User
 common.warning.experimental=This feature is EXPERIMENTAL and should be used with caution.
 contributions.title=User contributions for {0}
 diff.line=Line
+diff.next=Next diff &rarr;
 diff.nochange=There are no differences between the versions.
+diff.previous=&larr; Previous diff
+diff.revision=Revision as of {0}
 diff.title=Version Differences for {0}
 edit.action.preview=Preview
 edit.action.showchanges=Show Changes
